objects/LiveText__Current_Optin_Status__c.object
<CustomObject>
    <description>Represents the current opt-in status for a given combination of channel, LiveMessage channel ID, and subscriber channel ID.</description>
    <fields>
        <fullName>LiveText__LiveMessage_Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The LiveMessage channel item related to this opt-in status</description>
        <label>LiveMessage Channel</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipLabel>Current Optin Statuses</relationshipLabel>
        <relationshipName>Current_Optin_Statuses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Status__c</fullName>
        <description>The opt-in status of the subscriber. 1 = opted in, 0 = opted out</description>
        <label>Status</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Subscriber_Channel_ID__c</fullName>
        <description>The channel ID of the subscriber opting in or out of communication with the relevant LiveMessage channel item.</description>
        <label>Subscriber Channel ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__UID__c</fullName>
        <description>Unique identifier for this combination of LiveMessage channel and subscriber channel identifiers</description>
        <label>UID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Current Optin Status</label>
    <nameField>
        <label>Current Optin Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current Optin Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>